# usd-dynamic-file-formats-template

./: .gitignore  CMakeLists.txt
cmake/: dependencies.cmake
common/: logger_loader.hpp
plugin/: CMakeLists.txt  template.json  version.hpp.in
plugin/include/: body.hpp
plugin/src/: body.cpp
